[tool.poetry]
name = "poe-alt-crafter"
version = "0.1.0"
description = ""
authors = ["danila <danik200023@proton.me>"]
readme = "README.md"
packages = [{include = "poe_alt_crafter"}]

[tool.poetry.dependencies]
python = "^3.9"
pyclip = "^0.7.0"
pynput = "^1.7.6"
pyautogui = "^0.9.53"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

